# first-err

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
benches/: benchmark.rs
src/: lib.rs
