[package]
name = "first-err"
version = "0.2.0"
edition = "2021"
authors = ["visig"]
description = "Find the first Err in Iterator<Result<T, E>> and allow iterating continuously."
readme = "README.md"
repository = "https://github.com/visig9/first-err"
license = "MIT"
keywords = ["iterator", "collect"]
categories = ["rust-patterns", "no-std", "no-std::no-alloc"]


[dependencies]


[dev-dependencies]
criterion = "0.5.1"


[[bench]]
name = "benchmark"
harness = false
